--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,11 +9,12 @@
     <string name="submit">Submit</string>
     <string name="view_logs">View the order we guessed your PIN</string>
     <string name="result_text">Number of tries to crack your PIN:</string>
-    <string name="version">v 1.0</string>
+    <string name="version">Version 1.2</string>
     <string name="start_over">Try Again</string>
     <string name="about">About</string>
     <string name="about_dialog">About The Pin Crack Project</string>
     <string name="back">Back</string>
-    <string name="how_dialog">How Pin Crack Works</string>
+    <string name="how_dialog">How It Works</string>
+    <string name="invalid_pin">Invalid PIN</string>
     	
 </resources>
