--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="input_two">Enter your guessed PIN</string>
     <string name="cont">Continue</string>
     <string name="submit">Submit</string>
-    <string name="view_logs">View the order we guessed your PIN</string>
-    <string name="result_text">Number of tries to crack your PIN:</string>
+    <string name="view_logs">Guess Order</string>
+    <string name="result_text">Attempts to crack PIN</string>
     <string name="version">Version 1.2</string>
     <string name="start_over">Try Again</string>
     <string name="about">About</string>
