Pushed main features to Shoulder Surfer.
-name change
-color scheme switched
-algorithm fixed
-TODO: fix the about, how it works dialog
-TODO: edit the README

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Welcome to Pin Crack!</string>
+    <string name="hello">Shoulder Surfer</string>
+    <string name="spoue_attack">Unleashing the Spouse Attack</string>
     <string name="app_name">Pin Crack</string>
     <string name="input">Please enter your PIN</string>
     <string name="input_two">Enter your guessed PIN</string>
